<resources>
    <string name="app_name">k10_0080_finaltask</string>
    <!--店舗検索画面-->
    <string name="tv_search_shop">店舗検索画面</string>
    <string name="et_search_shop"></string>
    <string name="bt_favorite_shop">お気に入り店</string>
    <string name="bt_search_history">検索履歴</string>
    <!--お気に入り店画面-->
    <string name="tv_favorite_shop">お気に入り店画面</string>
    <string name="operation_select">操作を選んでしてください</string>
    <string name="explain_edit">説明・編集</string>
    <string name="delete_favorite">お気に入りから削除</string>
    <!--検索履歴画面-->
    <string name="tv_search_history">検索履歴画面</string>
    <!--お気に入り登録画面-->
    <string name="tv_favorite_shop_add">お気に入り登録画面</string>
    <string name="tv_shop_name">店名</string>
    <string name="tv_shop_category">店ジャンル</string>
    <string name="tv_shop_address">住所</string>
    <string name="tv_review_shop">評価</string>
    <string name="bt_add_favorite">お気に入り登録</string>
    <string name="done_add_favorite">お気に入りに追加しました。</string>
    <string name="review_write">評価を追加してください</string>
    <!--エラー文-->
    <string name="empty_error">店のキーワードを入力してください。</string>
    <string name="not_Data">データを取得できませんでした。再試行してください。</string>
    <string name="error_search_message">条件を絞り込んでください。</string>
    <string name="not_found">該当するお店が見つかりませんでした。</string>
    <string name="list_free">リストが空です。</string>
    <string name="miss_analysis">データの解析に失敗しました</string>
</resources>